Fix for sign in link not wrapping in welsh

--- a/app/assets/stylesheets/layout/common/_footer.scss
+++ b/app/assets/stylesheets/layout/common/_footer.scss
@@ -64,6 +64,10 @@
     @include respond-to($mq-l) {
       display: none;
     }
+
+    > form {
+      @include inline-block;
+    }
   }
 
   .l-language-link {
